--- a/index.html
+++ b/index.html
@@ -12,16 +12,9 @@
     <div id="root">Not rendered</div>
 
     <!-- Injectd React and ReactDOM using CDN -->
-    <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
+   
 
     <!-- Injected external js file -->
-    <script src="App.js"></script>
+    <script type="module" src="./src/app.js"></script>
   </body>
 </html>
